# AlgorithmsForNPProblems

Lab1/: 1.47_k.py  1.618_k.py  2_k.py  brute.py
Lab1/graph/: b20.sol  b30.sol  k330_a.sol  m20.sol  m40.sol  m50.sol  p150.sol  p60.sol  r100_005  r100_005.sol  r50_01.sol
Lab2/: 2_approx.py  logn_approx.py  simulated_annealing.py
Lab2/graph/: b100.sol  b20.sol  b30.sol  e150.sol  e20.sol  e40.sol  f30.sol  f35.sol  f40.sol  f56.sol  k330_a.sol  k330_b.sol  k330_c.sol  k330_d.sol  k330_e.sol  k330_f.sol  m100.sol  m20.sol  m40.sol  m50.sol  p150.sol  p20.sol  p200.sol  p35.sol  p60.sol  r100_005.sol  r100_01.sol  r200_001.sol  r200_005.sol  r30_01.sol  r30_05.sol  r50_001.sol  r50_01.sol  r50_05.sol  s50.sol  s500.sol
Lab3/: task1.py  task2.py
Lab4/: dimacs.py  main.py
Lab5/: sortnet.py  task1.py  task2.py
Lab6/: dimacs.py  grademe.py  main.py  task1_continous.py  task1_integer.py  task2.py  task2_relax.py  task3.py
Sokoban/: CMakeLists.txt  dfs.cpp  input2
Sokoban_checkpoint1/: CMakeLists.txt  input2
Sokoban_checkpoint1/src/: a_star.cpp  a_star_pull.cpp  bfs.cpp  greedy_best_first.cpp  greedy_best_first_pull.cpp  uniform_cost.cpp
Sokoban_checkpoint2/: CMakeLists.txt  best_first_search.cpp  best_first_search_recursive.cpp  checkpoint2.cpp  find_path.cpp  find_path_recursive.cpp  input  input3  main.cpp
Sokoban_checkpoint3/: CMakeLists.txt  best_first_search.cpp  best_first_search_no_file.cpp  dupa  input2  input_empty
Sokoban_checkpoint3/src/: a_star_pull.cpp  bfs_pull.cpp  dfs_pull.cpp
judge/: check_answers.py  generate_answers.py  judge.py
(+38 files in other folders)
